--- a/src/Resources/views/storefront/layout/footer/footer.html.twig
+++ b/src/Resources/views/storefront/layout/footer/footer.html.twig
@@ -3,6 +3,8 @@
 {% block layout_footer_navigation_columns %}
     {{ parent() }}
     <script>
+    document.addEventListener("DOMContentLoaded", () => {
         shopwareLegalNoticesImmediatelyVisible.openCollapsedFooter("{{ shopware.config.ShopwareLegalNoticesImmediatelyVisible.config.footerLinkLabel }}");
+    }));
     </script>
 {% endblock %}
