Fix execution of function

--- a/src/Resources/views/storefront/layout/footer/footer.html.twig
+++ b/src/Resources/views/storefront/layout/footer/footer.html.twig
@@ -9,6 +9,7 @@
         } else {
             setTimeout(openCollapsedFooter, 250);
         }
-    }();
+    };
+    openCollapsedFooter();
     </script>
 {% endblock %}
